[workspace]
members = [
    "cdragon",
    #"cdragon-cdn",
    "cdragon-prop",
    "cdragon-rman",
    "cdragon-utils",
    "cdragon-wad",
    "cdragon-binviewer",
    "cdragon-binviewer-tools",
]

default-members = [
    "cdragon",
    #"cdragon-cdn",
    "cdragon-prop",
    "cdragon-rman",
    "cdragon-utils",
    "cdragon-wad",
]

