[package]
name = "cdragon-binviewer"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
workspace = ".."

[dependencies]
cdragon-prop = { path = "../cdragon-prop" }
cdragon-utils = { path = "../cdragon-utils" }
futures = "0.3"
gloo-console = "0.2"
gloo-net = { version = "0.3", features = ["http"] }
lru = "0.11"
yew = { version = "0.20", features = ["csr"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "DomTokenList", "History", "UrlSearchParams", "EventTarget"] }
regex = "1"
thiserror = "1"
byteorder = "1"
# Tweak dependencies, for build
getrandom = { version = "0.2", features = ["js"] }

