[package]
name = "cdragon-binviewer"
version = "0.2.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "Web-based viewer for BIN files from Riot"
keywords = ["cdragon", "bin", "web"]

[dependencies]
cdragon-prop = { path = "../cdragon-prop", version = "0.2" }
cdragon-hashes = { path = "../cdragon-hashes", version = "0.2", features = ["bin"] }
futures = "0.3"
gloo-console = "0.3"
gloo-net = { version = "0.5", features = ["http"] }
lru = "0.12"
yew = { version = "0.21", features = ["csr"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "DomTokenList", "History", "UrlSearchParams", "EventTarget", "MouseEvent"] }
regex = "1"
thiserror = "1"
byteorder = "1"
# Tweak dependencies, for build
getrandom = { version = "0.2", features = ["js"] }

