[package]
name = "cdragon-cdn"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "Download League of Legends files from Riot CDN"
keywords = ["cdragon", "cdn"]

[features]
default = []
storage = ["dep:pathdiff", "dep:sha1_smol"]

[dependencies]
cdragon-utils = { path = "../cdragon-utils", version = "0.1", features = ["guarded_file"] }
cdragon-rman = { path = "../cdragon-rman", version = "0.1" }
memmap = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1"
serde_json = "1"
thiserror = "1"
url = "2"
zstd = "0.12"
pathdiff = { version = "0.2", optional = true }
sha1_smol = { version = "1", features = ["std"], optional = true }
