[package]
name = "cdragon-hashes"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "Work with hashes used by Riot, and reversed by CDragon"
keywords = ["cdragon", "hash"]

[features]
default = ["bin", "wad"]
bin = []
wad = ["dep:twox-hash"]

[dependencies]
cdragon-utils = { path = "../cdragon-utils", features = ["guarded_file"] }
num-traits = "0.2"
thiserror = "1"
twox-hash = { version = "1.6", optional = true }
