[package]
name = "cdragon-prop"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"

[dependencies]
cdragon-utils = { path = "../cdragon-utils", features = ["parsing"] }
cdragon-hashes = { path = "../cdragon-hashes", features = ["bin", "wad"] }
num_enum = "0.6"
nom = "7"
thiserror = "1"

