[package]
name = "cdragon-prop"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "Work with BIN files used by Riot"
keywords = ["cdragon", "bin", "prop"]

[dependencies]
cdragon-utils = { path = "../cdragon-utils", version = "0.1", features = ["parsing"] }
cdragon-hashes = { path = "../cdragon-hashes", version = "0.1", features = ["bin", "wad"] }
num_enum = "0.6"
nom = "7"
thiserror = "1"

