[package]
name = "cdragon-utils"
version = "0.2.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "Utility crate used by other CDragon crates"
keywords = ["cdragon"]

[features]
default = []
parsing = ["dep:nom", "dep:thiserror"]
guarded_file = []

[dependencies]
nom = { version = "8", optional = true }
thiserror = { version = "2", optional = true }

