[package]
name = "cdragon-wad"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"

[dependencies]
cdragon-utils = { path = "../cdragon-utils" }
nom = "7"
serde_json = "1"
thiserror = "1"
twox-hash = "1.6"
# Default features are not needed and break wasm build
zstd = { version = "0.12", default-features = false }

