[package]
name = "cdragon-wad"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"

[dependencies]
cdragon-utils = { path = "../cdragon-utils" }
cdragon-hashes = { path = "../cdragon-hashes", features = ["wad"] }
nom = "7"
serde_json = "1"
thiserror = "1"
# Default features are not needed and break wasm build
zstd = { version = "0.12", default-features = false }

