[package]
name = "cdragon"
version = "0.1.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "CDragon toolbox to manipulate various Riot formats"
keywords = ["cdragon", "cli", "wad", "rman"]
categories = ["command-line-utilities"]

[features]
default = []
hashes = ["dep:cdragon-utils"]

[dependencies]
cdragon-cdn = { path = "../cdragon-cdn" }
cdragon-hashes = { path = "../cdragon-hashes", features = ["bin", "wad"] }
cdragon-prop = { path = "../cdragon-prop" }
cdragon-rman = { path = "../cdragon-rman" }
cdragon-utils = { path = "../cdragon-utils", features = ["guarded_file"], optional = true }
cdragon-wad = { path = "../cdragon-wad" }
anyhow = "1"
clap = "4"
num-traits = "0.2"
walkdir = "2"

