[package]
name = "cdragon"
version = "0.2.0"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.communitydragon.org"
repository = "https://github.com/CommunityDragon/cdragon-rs"
description = "CDragon toolbox to manipulate various Riot formats"
keywords = ["cdragon", "cli", "wad", "rman"]
categories = ["command-line-utilities"]

[features]
default = []
hashes = ["dep:cdragon-utils"]

[dependencies]
cdragon-cdn = { path = "../cdragon-cdn", version = "0.2" }
cdragon-hashes = { path = "../cdragon-hashes", version = "0.2", features = ["bin", "wad"] }
cdragon-prop = { path = "../cdragon-prop", version = "0.2" }
cdragon-rman = { path = "../cdragon-rman", version = "0.2" }
cdragon-rst = { path = "../cdragon-rst", version = "0.2" }
cdragon-utils = { path = "../cdragon-utils", version = "0.2", features = ["guarded_file"], optional = true }
cdragon-wad = { path = "../cdragon-wad", version = "0.2" }
anyhow = "1"
clap = { version = "4", features = ["env"] }
num-traits = "0.2"
walkdir = "2"

